--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "filament/filament": "2.*",
+        "filament/spatie-laravel-media-library-plugin": "^2.0",
         "google/cloud-text-to-speech": "^1.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
