--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "tymon/jwt-auth": "*"
     },
     "require-dev": {
         "doctrine/dbal": "^3.6",
