--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "algolia/algoliasearch-client-php": "*",
         "filament/filament": "2.*",
         "filament/spatie-laravel-media-library-plugin": "^2.0",
         "google/cloud-text-to-speech": "^1.5",
@@ -13,6 +14,7 @@
         "laravel/framework": "^10.0",
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.2",
+        "laravel/scout": "^10.2",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "mohamedsabil83/filament-forms-tinyeditor": "^1.7",
