--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "mohamedsabil83/filament-forms-tinyeditor": "^1.7",
+        "predis/predis": "*",
         "tymon/jwt-auth": "*"
     },
     "require-dev": {
